--- a/index.html
+++ b/index.html
@@ -327,6 +327,15 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-lg-12 col-12">
+                        <div class="copyright-text-wrap mt-4">
+                            <p class="mb-0">
+                                <span class="copyright-text">Copyright © 2022 <a href="#">Sivali Central College</a></span>
+                            </p>
+                        </div>
+                    </div>
+                </div>
                 
             </div>
         </footer>
