--- a/detail.html
+++ b/detail.html
@@ -40,10 +40,8 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a href="index.html" class="navbar-brand mx-auto mx-lg-0">
-                    <img src="/images/logo.png" alt="logo" >
-                    sivalicc
-                </a>
+
+                <a href="index.html" class="navbar-brand mx-auto mx-lg-0">sivalicc</a>
 
                 <div class="d-flex align-items-center d-lg-none">
                     <i class="navbar-icon bi-telephone-plus me-3"></i>
@@ -95,173 +93,161 @@
                         <div class="col-lg-7 col-12">
                             <div class="hero-text">
                                 <div class="hero-title-wrap d-flex align-items-center mb-4">
-                                    <img src="images/happy-bearded-young-man.jpg" class="avatar-image avatar-image-large img-fluid" alt="">
+                                    <img src="images/iconenginering.jpeg" class="avatar-image avatar-image-large img-fluid" alt="">
 
-                                    <h1 class="hero-title ms-3 mb-0">Hello friend!</h1>
+                                    <h1 class="hero-title ms-3 mb-0">Welcome</h1>
                                 </div>
 
-                                <h2 class="mb-4">I’m available for freelance work.</h2>
+                                <h2 class="mb-4">School of Civil Engineering.</h2>
                                 <p class="mb-4"><a class="custom-btn btn custom-link" href="#section_2">Let's begin</a></p>
                             </div>
                         </div>
 
                         <div class="col-lg-5 col-12 position-relative">
                             <div class="hero-image-wrap"></div>
-                            <img src="images/portrait-happy-excited-man-holding-laptop-computer.png" class="hero-image img-fluid" alt="">
+                            <img src="images/studentuniversity.png" class="hero-image img-fluid" alt="">
                         </div>
 
                     </div>
                 </div>
 
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#005B30" fill-opacity="1" d="M0,160L24,160C48,160,96,160,144,138.7C192,117,240,75,288,64C336,53,384,75,432,106.7C480,139,528,181,576,208C624,235,672,245,720,240C768,235,816,213,864,186.7C912,160,960,128,1008,133.3C1056,139,1104,181,1152,202.7C1200,224,1248,224,1296,197.3C1344,171,1392,117,1416,90.7L1440,64L1440,0L1416,0C1392,0,1344,0,1296,0C1248,0,1200,0,1152,0C1104,0,1056,0,1008,0C960,0,912,0,864,0C816,0,768,0,720,0C672,0,624,0,576,0C528,0,480,0,432,0C384,0,336,0,288,0C240,0,192,0,144,0C96,0,48,0,24,0L0,0Z"></path></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#535da1" fill-opacity="1" d="M0,160L24,160C48,160,96,160,144,138.7C192,117,240,75,288,64C336,53,384,75,432,106.7C480,139,528,181,576,208C624,235,672,245,720,240C768,235,816,213,864,186.7C912,160,960,128,1008,133.3C1056,139,1104,181,1152,202.7C1200,224,1248,224,1296,197.3C1344,171,1392,117,1416,90.7L1440,64L1440,0L1416,0C1392,0,1344,0,1296,0C1248,0,1200,0,1152,0C1104,0,1056,0,1008,0C960,0,912,0,864,0C816,0,768,0,720,0C672,0,624,0,576,0C528,0,480,0,432,0C384,0,336,0,288,0C240,0,192,0,144,0C96,0,48,0,24,0L0,0Z"></path></svg>
             </section>
 
 
-        
-
-            <section class="projects section-padding" id="section_4">
+            <section class="about section-padding" id="section_2">
                 <div class="container">
                     <div class="row">
 
-                        <div class="col-lg-8 col-md-8 col-12 ms-auto">
-                            <div class="section-title-wrap d-flex justify-content-center align-items-center mb-4">
-                                <img src="images/white-desk-work-study-aesthetics.jpg" class="avatar-image img-fluid" alt="">
-
-                                <h2 class="text-white ms-4 mb-0">Faculty</h2>
-                            </div>
+                        <div class="col-lg-6 col-12">
+                            <img src="images/projects/engineering.jpg" class="about-image img-fluid" alt="">
                         </div>
 
-                        <div class="clearfix"></div>
+                        <div class="col-lg-6 col-12 mt-5 mt-lg-0">
+                            <div class="about-thumb">
 
-                        <div class="col-lg-4 col-md-6 col-12">
-                            <div class="projects-thumb">
-                                <div class="projects-info">
-                                    <small class="projects-tag">Branding</small>
+                                <div class="section-title-wrap d-flex justify-content-end align-items-center mb-4">
+                                    <h2 class="text-white me-4 mb-0">Faculty of Engineering</h2>
 
-                                    <h3 class="projects-title">Medicine</h3>
+                                    <img src="images/iconenginering.jpeg" class="avatar-image img-fluid" alt="">
                                 </div>
 
-                                <a href="images/projects/medicine.png" class="popup-image">
-                                    <img src="images/projects/medicine.png" class="projects-image img-fluid" alt="">
-                                </a>
-                            </div>
-                        </div>
+                                <h3 class="pt-2 mb-3">Faculty</h3>
 
-                        <div class="col-lg-4 col-md-6 col-12">
-                            <div class="projects-thumb">
-                                <div class="projects-info">
-                                    <small class="projects-tag">Photography</small>
-
-                                    <h3 class="projects-title">Engineering</h3>
-                                </div>
-
-                                <a href="images/projects/thisengineering.png" class="popup-image">
-                                    <img src="images/projects/thisengineering.png" class="projects-image img-fluid" alt="">
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 col-12">
-                            <div class="projects-thumb">
-                                <div class="projects-info">
-                                    <small class="projects-tag">Website</small>
-
-                                    <h3 class="projects-title">Designer</h3>
-                                </div>
-
-                                <a href="images/projects/true-agency-9Bjog5FZ-oc-unsplash.jpg" class="popup-image">
-                                    <img src="images/projects/true-agency-9Bjog5FZ-oc-unsplash.jpg" class="projects-image img-fluid" alt="">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-12">
-                            <div class="projects-thumb">
-                                <div class="projects-info">
-                                    <small class="projects-tag">Branding</small>
-
-                                    <h3 class="projects-title">Computer & Science</h3>
-                                </div>
-
-                                <a href="images/projects/medicine.png" class="popup-image">
-                                    <img src="images/projects/medicine.png" class="projects-image img-fluid" alt="">
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 col-12">
-                            <div class="projects-thumb">
-                                <div class="projects-info">
-                                    <small class="projects-tag">Photography</small>
-
-                                    <h3 class="projects-title">Agriculture</h3>
-                                </div>
-
-                                <a href="images/projects/thisengineering.png" class="popup-image">
-                                    <img src="images/projects/thisengineering.png" class="projects-image img-fluid" alt="">
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 col-12">
-                            <div class="projects-thumb">
-                                <div class="projects-info">
-                                    <small class="projects-tag">Website</small>
-
-                                    <h3 class="projects-title">Law Faculty</h3>
-                                </div>
-
-                                <a href="images/projects/lawfaculty.png" class="popup-image">
-                                    <img src="images/projects/lawfaculty.png" class="projects-image img-fluid" alt="">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-12">
-                            <div class="projects-thumb">
-                                <div class="projects-info">
-                                    <small class="projects-tag">Faculty Of</small>
-
-                                    <h3 class="projects-title">Agriculture</h3>
-                                </div>
-
-                                <a href="images/projects/agriculture.png" class="popup-image">
-                                    <img src="images/projects/agriculture.png" class="projects-image img-fluid" alt="">
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 col-12">
-                            <div class="projects-thumb">
-                                <div class="projects-info">
-                                    <small class="projects-tag">Website</small>
-
-                                    <h3 class="projects-title">Law Faculty</h3>
-                                </div>
-
-                                <a href="images/projects/true-agency-9Bjog5FZ-oc-unsplash.jpg" class="popup-image">
-                                    <img src="images/projects/true-agency-9Bjog5FZ-oc-unsplash.jpg" class="projects-image img-fluid" alt="">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-12">
-                            <div class="projects-thumb">
-                                <div class="projects-info">
-                                    <small class="projects-tag">Website</small>
-
-                                    <h3 class="projects-title">Law Faculty</h3>
-                                </div>
-
-                                <a href="images/projects/true-agency-9Bjog5FZ-oc-unsplash.jpg" class="popup-image">
-                                    <img src="images/projects/true-agency-9Bjog5FZ-oc-unsplash.jpg" class="projects-image img-fluid" alt="">
-                                </a>
+                                <p>The School boasts a strong cadre of over 120 full-time faculty members with a broad spectrum of teaching and research expertise educated in renowned universities, including Massachusetts Institute of Technology (MIT), Stanford University, University of Cambridge, and Imperial College London, etc.</p>
                             </div>
                         </div>
 
                     </div>
+                </div>
+            </section>
+
+            <section class="services section-padding" id="section_3">
+                <div class="container">
+                    <div class="row">
+
+                        <div class="col-lg-10 col-12 mx-auto">
+                            <div class="section-title-wrap d-flex justify-content-center align-items-center mb-5">
+                                <img src="images/handshake-man-woman-after-signing-business-contract-closeup.jpg" class="avatar-image img-fluid" alt="">
+
+                                <h2 class="text-white ms-4 mb-0">Facility</h2>
+                            </div>
+
+                            <div class="row pt-lg-5">
+                                <div class="col-lg-6 col-12">
+                                    <div class="services-thumb">
+                                        <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
+                                            <h3 class="mb-0">Structure and Materials</h3>
+                                        </div>
+
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis risus id mollis volutpat. Suspendisse aliquam, nisi in pulvinar commodo</p>
+
+                                        <a href="#" class="custom-btn custom-border-btn btn mt-3">Discover More</a>
+
+                                        <div class="services-icon-wrap d-flex justify-content-center align-items-center">
+                                            <i class="services-icon bi-globe"></i>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-6 col-12">
+                                    <div class="services-thumb services-thumb-up">
+                                        <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
+                                            <h3 class="mb-0">Transportation Laboratory</h3>
+                                        </div>
+
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis risus id mollis volutpat. Suspendisse aliquam, nisi in pulvinar commodo.</p>
+
+                                        <a href="#" class="custom-btn custom-border-btn btn mt-3">Discover More</a>
+
+                                        <div class="services-icon-wrap d-flex justify-content-center align-items-center">
+                                            <i class="services-icon bi-lightbulb"></i>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-6 col-12">
+                                    <div class="services-thumb">
+                                        <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
+                                            <h3 class="mb-0">Ecommerce</h3>
+                                        </div>
+
+                                        <p>If you need a customized ecommerce website for your business, feel free to discuss with me.</p>
+
+                                        <a href="#" class="custom-btn custom-border-btn btn mt-3">Discover More</a>
+
+                                        <div class="services-icon-wrap d-flex justify-content-center align-items-center">
+                                            <i class="services-icon bi-phone"></i>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-6 col-12">
+                                    <div class="services-thumb services-thumb-up">
+                                        <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
+                                            <h3 class="mb-0">Geotechnical Laboratories</h3>
+                                        </div>
+
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus convallis risus id mollis volutpat. Suspendisse aliquam, nisi in pulvinar commodo<br>
+                                        </p>
+
+                                        <a href="#" class="custom-btn custom-border-btn btn mt-3">Discover More</a>
+
+                                        <div class="services-icon-wrap d-flex justify-content-center align-items-center">
+                                            <i class="services-icon bi-google"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="about section-padding" id="section_profesor">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <h2 class="text-center">Our Professor</h2>
+                        </div>
+
+                        <div class="col-lg-12 mt-2 mb-4"></div>
+                        <div class="col-lg-4 col-12">
+                            <img src="images/professor/professor2.png" class="about-image img-fluid" alt="">
+                        </div>
+                        <div class="col-lg-4 col-12">
+                            <img src="images/professor/professor1.png" class="about-image img-fluid" alt="">
+                        </div>
+                        <div class="col-lg-4 col-12">
+                            <img src="images/professor/professor3.png" class="about-image img-fluid" alt="">
+                        </div>
+                    </div>   
                 </div>
             </section>
 
         </main>
 
+        
         <footer class="site-footer">
             <div class="container">
                 <div class="row">
