--- a/course.html
+++ b/course.html
@@ -100,14 +100,14 @@
                                     <h1 class="hero-title ms-3 mb-0">Hello friend!</h1>
                                 </div>
 
-                                <h2 class="mb-4">I’m available for freelance work.</h2>
+                                <h2 class="mb-4">Lets Come Join Sivalic Center College.</h2>
                                 <p class="mb-4"><a class="custom-btn btn custom-link" href="#section_2">Let's begin</a></p>
                             </div>
                         </div>
 
                         <div class="col-lg-5 col-12 position-relative">
                             <div class="hero-image-wrap"></div>
-                            <img src="images/portrait-happy-excited-man-holding-laptop-computer.png" class="hero-image img-fluid" alt="">
+                            <img src="images/graduated.png" class="hero-image img-fluid" alt="">
                         </div>
 
                     </div>
@@ -136,7 +136,7 @@
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="projects-thumb">
                                 <div class="projects-info">
-                                    <small class="projects-tag">Branding</small>
+                                    <small class="projects-tag">Faculty</small>
 
                                     <h3 class="projects-title">Medicine</h3>
                                 </div>
@@ -150,9 +150,9 @@
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="projects-thumb">
                                 <div class="projects-info">
-                                    <small class="projects-tag">Photography</small>
+                                    <small class="projects-tag">Faculty Of Engineering</small>
 
-                                    <h3 class="projects-title">Engineering</h3>
+                                    <h3 class="projects-title">Electrical</h3>
                                 </div>
 
                                 <a href="images/projects/thisengineering.png" class="popup-image">
@@ -164,7 +164,7 @@
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="projects-thumb">
                                 <div class="projects-info">
-                                    <small class="projects-tag">Website</small>
+                                    <small class="projects-tag">Faculty Of</small>
 
                                     <h3 class="projects-title">Designer</h3>
                                 </div>
@@ -177,13 +177,13 @@
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="projects-thumb">
                                 <div class="projects-info">
-                                    <small class="projects-tag">Branding</small>
+                                    <small class="projects-tag">Faculty</small>
 
                                     <h3 class="projects-title">Computer & Science</h3>
                                 </div>
 
-                                <a href="images/projects/medicine.png" class="popup-image">
-                                    <img src="images/projects/medicine.png" class="projects-image img-fluid" alt="">
+                                <a href="images/faculty/computer.jpg" class="popup-image">
+                                    <img src="images/faculty/computer.jpg" class="projects-image img-fluid" alt="">
                                 </a>
                             </div>
                         </div>
@@ -191,13 +191,13 @@
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="projects-thumb">
                                 <div class="projects-info">
-                                    <small class="projects-tag">Photography</small>
+                                    <small class="projects-tag">Faculty</small>
 
                                     <h3 class="projects-title">Agriculture</h3>
                                 </div>
 
-                                <a href="images/projects/thisengineering.png" class="popup-image">
-                                    <img src="images/projects/thisengineering.png" class="projects-image img-fluid" alt="">
+                                <a href="images/faculty/agriculturestudent.jpeg" class="popup-image">
+                                    <img src="images/faculty/agriculturestudent.jpeg" class="projects-image img-fluid" alt="">
                                 </a>
                             </div>
                         </div>
@@ -205,13 +205,13 @@
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="projects-thumb">
                                 <div class="projects-info">
-                                    <small class="projects-tag">Website</small>
+                                    <small class="projects-tag">Law</small>
 
                                     <h3 class="projects-title">Law Faculty</h3>
                                 </div>
 
-                                <a href="images/projects/lawfaculty.png" class="popup-image">
-                                    <img src="images/projects/lawfaculty.png" class="projects-image img-fluid" alt="">
+                                <a href="images/faculty/law.jpeg" class="popup-image">
+                                    <img src="images/faculty/law.jpeg" class="projects-image img-fluid" alt="">
                                 </a>
                             </div>
                         </div>
@@ -223,8 +223,8 @@
                                     <h3 class="projects-title">Agriculture</h3>
                                 </div>
 
-                                <a href="images/projects/agriculture.png" class="popup-image">
-                                    <img src="images/projects/agriculture.png" class="projects-image img-fluid" alt="">
+                                <a href="images/faculty/agriculturestudent.jpeg" class="popup-image">
+                                    <img src="images/faculty/agriculturestudent.jpeg" class="projects-image img-fluid" alt="">
                                 </a>
                             </div>
                         </div>
@@ -232,13 +232,13 @@
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="projects-thumb">
                                 <div class="projects-info">
-                                    <small class="projects-tag">Website</small>
+                                    <small class="projects-tag">Faculty</small>
 
-                                    <h3 class="projects-title">Law Faculty</h3>
+                                    <h3 class="projects-title">Humanities</h3>
                                 </div>
 
-                                <a href="images/projects/true-agency-9Bjog5FZ-oc-unsplash.jpg" class="popup-image">
-                                    <img src="images/projects/true-agency-9Bjog5FZ-oc-unsplash.jpg" class="projects-image img-fluid" alt="">
+                                <a href="images/faculty/humanity.jpg" class="popup-image">
+                                    <img src="images/faculty/humanity.jpg" class="projects-image img-fluid" alt="">
                                 </a>
                             </div>
                         </div>
