--- a/course.html
+++ b/course.html
@@ -67,10 +67,6 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_4">Contact</a>
-                        </li>
-
-                        <li class="nav-item">
                             <a class="nav-link click-scroll" href="#section_5">Contact</a>
                         </li>
                     </ul>
@@ -95,12 +91,12 @@
                         <div class="col-lg-7 col-12">
                             <div class="hero-text">
                                 <div class="hero-title-wrap d-flex align-items-center mb-4">
-                                    <img src="images/happy-bearded-young-man.jpg" class="avatar-image avatar-image-large img-fluid" alt="">
+                                    <img src="images/studentjoin2.png" class="avatar-image avatar-image-large img-fluid" alt="">
 
                                     <h1 class="hero-title ms-3 mb-0">Hello friend!</h1>
                                 </div>
 
-                                <h2 class="mb-4">Lets Come Join Sivalic Center College.</h2>
+                                <h2 class="mb-4">Lets Come Join Sivalic College.</h2>
                                 <p class="mb-4"><a class="custom-btn btn custom-link" href="#section_2">Let's begin</a></p>
                             </div>
                         </div>
@@ -125,7 +121,7 @@
 
                         <div class="col-lg-8 col-md-8 col-12 ms-auto">
                             <div class="section-title-wrap d-flex justify-content-center align-items-center mb-4">
-                                <img src="images/white-desk-work-study-aesthetics.jpg" class="avatar-image img-fluid" alt="">
+                                <img src="images/logo.jpeg" class="avatar-image img-fluid" alt="">
 
                                 <h2 class="text-white ms-4 mb-0">Faculty</h2>
                             </div>
@@ -144,6 +140,9 @@
                                 <a href="images/projects/medicine.png" class="popup-image">
                                     <img src="images/projects/medicine.png" class="projects-image img-fluid" alt="">
                                 </a>
+                                <div class="pt-4">
+                                    <a class="bg-success text-white p-2 rounded" href="detail.html">Read more</a>
+                                </div>
                             </div>
                         </div>
 
@@ -158,6 +157,9 @@
                                 <a href="images/projects/thisengineering.png" class="popup-image">
                                     <img src="images/projects/thisengineering.png" class="projects-image img-fluid" alt="">
                                 </a>
+                                <div class="pt-4">
+                                    <a class="bg-success text-white p-2 rounded" href="detail.html">Read more</a>
+                                </div>
                             </div>
                         </div>
 
@@ -172,6 +174,9 @@
                                 <a href="images/projects/true-agency-9Bjog5FZ-oc-unsplash.jpg" class="popup-image">
                                     <img src="images/projects/true-agency-9Bjog5FZ-oc-unsplash.jpg" class="projects-image img-fluid" alt="">
                                 </a>
+                                <div class="pt-4">
+                                    <a class="bg-success text-white p-2 rounded" href="detail.html">Read more</a>
+                                </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-12">
@@ -185,6 +190,9 @@
                                 <a href="images/faculty/computer.jpg" class="popup-image">
                                     <img src="images/faculty/computer.jpg" class="projects-image img-fluid" alt="">
                                 </a>
+                                <div class="pt-4">
+                                    <a class="bg-success text-white p-2 rounded" href="detail.html">Read more</a>
+                                </div>
                             </div>
                         </div>
 
@@ -199,6 +207,9 @@
                                 <a href="images/faculty/agriculturestudent.jpeg" class="popup-image">
                                     <img src="images/faculty/agriculturestudent.jpeg" class="projects-image img-fluid" alt="">
                                 </a>
+                                <div class="pt-4">
+                                    <a class="bg-success text-white p-2 rounded" href="detail.html">Read more</a>
+                                </div>
                             </div>
                         </div>
 
@@ -213,6 +224,9 @@
                                 <a href="images/faculty/law.jpeg" class="popup-image">
                                     <img src="images/faculty/law.jpeg" class="projects-image img-fluid" alt="">
                                 </a>
+                                <div class="pt-4">
+                                    <a class="bg-success text-white p-2 rounded" href="detail.html">Read more</a>
+                                </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-12">
@@ -226,6 +240,9 @@
                                 <a href="images/faculty/agriculturestudent.jpeg" class="popup-image">
                                     <img src="images/faculty/agriculturestudent.jpeg" class="projects-image img-fluid" alt="">
                                 </a>
+                                <div class="pt-4">
+                                    <a class="bg-success text-white p-2 rounded" href="detail.html">Read more</a>
+                                </div>
                             </div>
                         </div>
 
@@ -240,12 +257,15 @@
                                 <a href="images/faculty/humanity.jpg" class="popup-image">
                                     <img src="images/faculty/humanity.jpg" class="projects-image img-fluid" alt="">
                                 </a>
+                                <div class="pt-4">
+                                    <a class="bg-success text-white p-2 rounded" href="detail.html">Read more</a>
+                                </div>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="projects-thumb">
                                 <div class="projects-info">
-                                    <small class="projects-tag">Website</small>
+                                    <small class="projects-tag">Faculty</small>
 
                                     <h3 class="projects-title">Law Faculty</h3>
                                 </div>
@@ -253,6 +273,10 @@
                                 <a href="images/projects/true-agency-9Bjog5FZ-oc-unsplash.jpg" class="popup-image">
                                     <img src="images/projects/true-agency-9Bjog5FZ-oc-unsplash.jpg" class="projects-image img-fluid" alt="">
                                 </a>
+                                <div class="pt-4">
+                                    <a class="bg-success text-white p-2 rounded" href="detail.html">Read more</a>
+                                </div>
+                                
                             </div>
                         </div>
 
