--- a/detail.html
+++ b/detail.html
@@ -64,9 +64,6 @@
                             <a class="nav-link click-scroll" href="#section_3">News</a>
                         </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_4">Contact</a>
-                        </li>
 
                         <li class="nav-item">
                             <a class="nav-link click-scroll" href="#section_5">Contact</a>
@@ -134,7 +131,7 @@
 
                                 <h3 class="pt-2 mb-3">Faculty</h3>
 
-                                <p>The School boasts a strong cadre of over 120 full-time faculty members with a broad spectrum of teaching and research expertise educated in renowned universities, including Massachusetts Institute of Technology (MIT), Stanford University, University of Cambridge, and Imperial College London, etc.</p>
+                                <p>The School boasts a strong cadre of over 120 full-time faculty members with a broad spectrum of teaching and research expertise educated in renowned universities, including Srilanka Institute of Technology (MIT), Stanford Srilanka, University of Srilanka, and Imperial College Srilanka, etc.</p>
                             </div>
                         </div>
 
@@ -189,7 +186,7 @@
                                 <div class="col-lg-6 col-12">
                                     <div class="services-thumb">
                                         <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
-                                            <h3 class="mb-0">Ecommerce</h3>
+                                            <h3 class="mb-0">Geometric Laboratories</h3>
                                         </div>
 
                                         <p>If you need a customized ecommerce website for your business, feel free to discuss with me.</p>
