--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
                         <div class="col-lg-4 col-12">
                             <h2>KNOW <br>OUR<br> COURSES</h2>     
                             <p class="pt-2">A universe of opportunities.</p>
-                            <div class="d-flex align-items-center">       
-                                <h4 class="pt-1">CONTINUE</h4> <i class="bi bi-arrow-right icon-arrow"></i>
-                            </div>
+                                  
+                               <a href="course.html"class="d-flex align-items-center"> <h4 class="pt-1">CONTINUE</h4> <i class="bi bi-arrow-right icon-arrow"></i></a>
+                            
                         </div>
                         <div class="col-lg-8 col-12 mt-5 mt-lg-0">
                            <div class="row">
@@ -257,7 +257,7 @@
                                     form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                                 </div>
                                 <div class="col-lg-5">
-                                    <button type="submit" class="btn btn-primary mb-2">Confirm identity</button>
+                                    <button type="submit" class="btn mb-2">Confirm identity</button>
                                 </div>
                             </div>
                         </div>
