--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_5">Contact</a>
+                            <a class="nav-link click-scroll" href="contact.html">Contact</a>
                         </li>
                     </ul>
 
@@ -230,7 +230,7 @@
                             </div> 
                         </div>
                         <div class="col-lg-4">
-                            <img src="images/Foto aluno premioo.jpeg" class="img-fluid" alt="">
+                            <img src="images/Foto aluno premioo.jpeg" class="img-fluid rounded" alt="">
                         </div>
 
                     </div>
