--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-lg-5">
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_1">Home</a>
+                            <a class="nav-link click-scroll" href="/">Home</a>
                         </li>
 
                         <li class="nav-item">
@@ -65,12 +65,10 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_4">Contact</a>
+                            <a class="nav-link click-scroll" href="contact.html">Contact</a>
                         </li>
 
-                        <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_5">Contact</a>
-                        </li>
+                        
                     </ul>
 
                     <div class="d-lg-flex align-items-center d-none ms-auto">
@@ -93,7 +91,7 @@
                         <div class="col-lg-7 col-12">
                             <div class="hero-text">
                                 <div class="hero-title-wrap d-flex align-items-center mb-4">
-                                    <img src="images/happy-bearded-young-man.jpg" class="avatar-image avatar-image-large img-fluid" alt="">
+                                    <img src="images/student3.jpeg" class="avatar-image avatar-image-large img-fluid" alt="">
 
                                     <h1 class="hero-title ms-3 mb-0">Hello friend!</h1>
                                 </div>
@@ -164,16 +162,16 @@
 
                         <div class="col-lg-3 col-md-6 col-12 pe-lg-0">
                             <div class="contact-info contact-info-border-start d-flex flex-column">
-                                <strong class="site-footer-title d-block mb-3">Services</strong>
+                                <strong class="site-footer-title d-block mb-3">Topic</strong>
 
                                 <ul class="footer-menu">
-                                    <li class="footer-menu-item"><a href="#" class="footer-menu-link">Websites</a></li>
+                                    <li class="footer-menu-item"><a href="#" class="footer-menu-link">Education</a></li>
 
-                                    <li class="footer-menu-item"><a href="#" class="footer-menu-link">Branding</a></li>
+                                    <li class="footer-menu-item"><a href="#" class="footer-menu-link">Registration</a></li>
 
-                                    <li class="footer-menu-item"><a href="#" class="footer-menu-link">Ecommerce</a></li>
+                                    <li class="footer-menu-item"><a href="#" class="footer-menu-link">Faculty</a></li>
 
-                                    <li class="footer-menu-item"><a href="#" class="footer-menu-link">SEO</a></li>
+                                    <li class="footer-menu-item"><a href="#" class="footer-menu-link">Etc</a></li>
                                 </ul>
 
                                 <strong class="site-footer-title d-block mt-4 mb-3">Stay connected</strong>
@@ -188,9 +186,10 @@
                                     <li class="social-icon-item"><a href="https://www.youtube.com/templatemo" class="social-icon-link bi-youtube"></a></li>
                                 </ul>
 
-                                <strong class="site-footer-title d-block mt-4 mb-3">Start a project</strong>
+                                <strong class="site-footer-title d-block mt-4 mb-3">Lets Start Contact us</strong>
 
-                                <p class="mb-0">I’m available for freelance projects</p>
+                                <p class="mb-0">uis nec metus a erat tincidunt
+                                    consectetur</p>
                             </div>
                         </div>
 
@@ -199,14 +198,15 @@
                                 <strong class="site-footer-title d-block mb-3">About</strong>
 
                                 <p class="mb-2">
-                                    Joshua is a professional web developer. Feel free to get in touch with me.
+                                    Sivalicc consectetur adipiscing elit. Duis nec metus a erat tincidunt
+                                    consectetur eget eget magna. fell free to get in touch with me.
                           </p>
 
                                 <strong class="site-footer-title d-block mt-4 mb-3">Email</strong>
 
                                 <p>
-                                    <a href="mailto:hello@josh.design">
-                                        hello@josh.design
+                                    <a href="mailto:hello@sivalicc.lk">
+                                        hello@sivalicc.lk
                                     </a>
                                 </p>
 
@@ -245,7 +245,7 @@
 
                                             <label class="form-check-label" for="inlineCheckbox1">
                                                 <i class="bi-globe form-check-icon"></i>
-                                                <span class="form-check-label-text">Websites</span>
+                                                <span class="form-check-label-text">Education</span>
                                             </label>
                                       </div>
                                     </div>
@@ -256,7 +256,7 @@
 
                                             <label class="form-check-label" for="inlineCheckbox2">
                                                 <i class="bi-lightbulb form-check-icon"></i>
-                                                <span class="form-check-label-text">Branding</span>
+                                                <span class="form-check-label-text">Registration</span>
                                             </label>
                                         </div>
                                     </div>
@@ -267,7 +267,7 @@
 
                                             <label class="form-check-label" for="inlineCheckbox3">
                                                 <i class="bi-phone form-check-icon"></i>
-                                                <span class="form-check-label-text">Ecommerce</span>
+                                                <span class="form-check-label-text">Facukty</span>
                                             </label>
                                         </div>
                                     </div>
@@ -278,7 +278,7 @@
 
                                             <label class="form-check-label" for="inlineCheckbox4">
                                                 <i class="bi-google form-check-icon"></i>
-                                                <span class="form-check-label-text">SEO</span>
+                                                <span class="form-check-label-text">Etc</span>
                                             </label>
                                         </div>
                                     </div>
@@ -287,7 +287,7 @@
                                         <div class="form-floating">
                                             <textarea class="form-control" id="message" name="message" placeholder="Tell me about the project"></textarea>
                                             
-                                            <label for="floatingTextarea">Tell me about the project</label>
+                                            <label for="floatingTextarea">Tell me now</label>
                                         </div>
                                     </div>
 
