--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-lg-5">
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_1">Home</a>
+                            <a class="nav-link click-scroll" href="#">Home</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_2">Events</a>
+                            <a class="nav-link click-scroll" href="#">Events</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_3">News</a>
+                            <a class="nav-link click-scroll" href="#">News</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="contact.html">Contact</a>
+                            <a class="nav-link click-scroll" href="#">Contact</a>
                         </li>
                     </ul>
 
@@ -159,7 +159,7 @@
                     <div class="row">
 
                         <div class="col-lg-4 col-12">
-                            <h2>KNOW <br>OUR<br> COURSES</h2>     
+                            <h2>KNOW <br>OUR<br> FACULTY</h2>     
                             <p class="pt-2">A universe of opportunities.</p>
                                   
                                <a href="course.html"class="d-flex align-items-center"> <h4 class="pt-1">CONTINUE</h4> <i class="bi bi-arrow-right icon-arrow"></i></a>
