--- a/contact.html
+++ b/contact.html
@@ -57,11 +57,11 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_2">Events</a>
+                            <a class="nav-link click-scroll" href="#">Events</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_3">News</a>
+                            <a class="nav-link click-scroll" href="#">News</a>
                         </li>
 
                         <li class="nav-item">
@@ -91,7 +91,7 @@
                         <div class="col-lg-7 col-12">
                             <div class="hero-text">
                                 <div class="hero-title-wrap d-flex align-items-center mb-4">
-                                    <img src="images/student3.jpeg" class="avatar-image avatar-image-large img-fluid" alt="">
+                                    <img src="images/studentjoin.jpeg" class="avatar-image avatar-image-large img-fluid" alt="">
 
                                     <h1 class="hero-title ms-3 mb-0">Hello friend!</h1>
                                 </div>
@@ -114,45 +114,14 @@
 
 
 
-            <section class="clients section-padding">
-                <div class="container">
-                    <div class="row align-items-center">
-
-                        <div class="col-lg-12 col-12">
-                            <h3 class="text-center mb-5">Companies I've had worked</h3>
-                        </div>
-
-                        <div class="col-lg-2 col-4 ms-auto clients-item-height">
-                            <img src="images/clients/cachet.svg" class="clients-image img-fluid" alt="">
-                        </div>
-
-                        <div class="col-lg-2 col-4 clients-item-height">
-                            <img src="images/clients/guitar-center.svg" class="clients-image img-fluid" alt="">
-                        </div>
-
-                        <div class="col-lg-2 col-4 clients-item-height">
-                            <img src="images/clients/tokico.svg" class="clients-image img-fluid" alt="">
-                        </div>
-
-                        <div class="col-lg-2 col-4 clients-item-height">
-                            <img src="images/clients/shopify.svg" class="clients-image img-fluid" alt="">
-                        </div>
-
-                        <div class="col-lg-2 col-4 me-auto clients-item-height">
-                            <img src="images/clients/profil-rejser.svg" class="clients-image img-fluid" alt="">
-                        </div>
-
-                    </div>
-                </div>
-            </section>
-
+         
             <section class="contact section-padding" id="section_5">
                 <div class="container">
                     <div class="row">
 
                         <div class="col-lg-6 col-md-8 col-12">
                             <div class="section-title-wrap d-flex justify-content-center align-items-center mb-5">
-                                <img src="images/aerial-view-man-using-computer-laptop-wooden-table.jpg" class="avatar-image img-fluid" alt="">
+                                <img src="images/student3.jpeg" class="avatar-image img-fluid" alt="">
 
                                 <h2 class="text-white ms-4 mb-0">Say Hi</h2>
                             </div>
@@ -177,13 +146,13 @@
                                 <strong class="site-footer-title d-block mt-4 mb-3">Stay connected</strong>
 
                                 <ul class="social-icon">
-                                    <li class="social-icon-item"><a href="https://twitter.com/minthu" class="social-icon-link bi-twitter"></a></li>
+                                    <li class="social-icon-item"><a href="#" class="social-icon-link bi-twitter"></a></li>
 
                                     <li class="social-icon-item"><a href="#" class="social-icon-link bi-instagram"></a></li>
 
                                     <li class="social-icon-item"><a href="#" class="social-icon-link bi-pinterest"></a></li>
 
-                                    <li class="social-icon-item"><a href="https://www.youtube.com/templatemo" class="social-icon-link bi-youtube"></a></li>
+                                    <li class="social-icon-item"><a href="#" class="social-icon-link bi-youtube"></a></li>
                                 </ul>
 
                                 <strong class="site-footer-title d-block mt-4 mb-3">Lets Start Contact us</strong>
