--- a/index.html
+++ b/index.html
@@ -162,22 +162,22 @@
                             <h2>KNOW <br>OUR<br> FACULTY</h2>     
                             <p class="pt-2">A universe of opportunities.</p>
                                   
-                               <a href="course.html"class="d-flex align-items-center"> <h4 class="pt-1">CONTINUE</h4> <i class="bi bi-arrow-right icon-arrow"></i></a>
+                               <a href="course.html" class="d-flex align-items-center"> <h4 class="pt-1">CONTINUE</h4> <i class="bi bi-arrow-right icon-arrow"></i></a>
                             
                         </div>
                         <div class="col-lg-8 col-12 mt-5 mt-lg-0">
                            <div class="row">
                                 <div class="col-lg-4 position-relative card-course">     
-                                  <img src="images/projects/Foto_Publicidade.png" class="about-image img-fluid" alt="">
-                                  <h4 class="text-white text-course">Publishing</h4>
+                                  <img src="images/projects/2.jpg" class="about-image img-fluid" alt="">
+                                  <h5 class="text-white text-course">Publishing & Advertising</h5>
                                 </div>
                                 <div class="col-lg-4 position-relative card-course">     
-                                    <img src="images/projects/Foto_gastronomia.png" class="about-image img-fluid" alt="">
-                                    <h4 class="text-white text-course">Medicine</h4>
+                                    <img src="images/projects/3.jpeg" class="about-image img-fluid" alt="">
+                                    <h5 class="text-white text-course">Science & Technology</h5>
                                  </div>
                                  <div class="col-lg-4 position-relative card-course">     
-                                    <img src="images/projects/Foto_Publicidade_two.png" class="about-image img-fluid" alt="">
-                                    <h4 class="text-white text-course">Publishing</h4>
+                                    <img src="images/projects/1.jpg" class="about-image img-fluid" alt="">
+                                    <h5 class="text-white text-course">Law</h5>
                                 </div>
                            </div>
                         </div>
