--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <link href="css/magnific-popup.css" rel="stylesheet">
 
-        <link href="css/templatemo-first-portfolio-style.css" rel="stylesheet">
+        <link href="css/sivalicc-style.css" rel="stylesheet">
         <link rel="stylesheet" href="css/owl.carousel.min.css">
         <link rel="stylesheet" href="css/owl.theme.default.min.css">
         
@@ -68,7 +68,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#">Contact</a>
+                            <a class="nav-link click-scroll" href="contact.html">Contact</a>
                         </li>
                     </ul>
 
@@ -169,11 +169,11 @@
                            <div class="row">
                                 <div class="col-lg-4 position-relative card-course">     
                                   <img src="images/projects/2.jpg" class="about-image img-fluid" alt="">
-                                  <h5 class="text-white text-course">Publishing & Advertising</h5>
+                                  <h5 class="text-white text-course">Publishing Advertising</h5>
                                 </div>
                                 <div class="col-lg-4 position-relative card-course">     
                                     <img src="images/projects/3.jpeg" class="about-image img-fluid" alt="">
-                                    <h5 class="text-white text-course">Science & Technology</h5>
+                                    <h5 class="text-white text-course">Science Technology</h5>
                                  </div>
                                  <div class="col-lg-4 position-relative card-course">     
                                     <img src="images/projects/1.jpg" class="about-image img-fluid" alt="">
