--- a/detail.html
+++ b/detail.html
@@ -40,8 +40,10 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
-                <a href="index.html" class="navbar-brand mx-auto mx-lg-0">sivalicc</a>
+                <a href="index.html" class="navbar-brand mx-auto mx-lg-0">
+                    <img src="/images/logo.png" alt="logo" >
+                    sivalicc
+                </a>
 
                 <div class="d-flex align-items-center d-lg-none">
                     <i class="navbar-icon bi-telephone-plus me-3"></i>
@@ -251,7 +253,7 @@
                 <div class="row">
                     <div class="col-lg-6 d-flex">
                         <a href="index.html" class="navbar-brand mx-auto mx-lg-0">
-                            <img src="/images/logo.png" alt="logo" >
+                            <img src="images/logo.png" alt="logo" >
                             sivalicc
                         </a>
                     </div>
