--- a/contact.html
+++ b/contact.html
@@ -40,8 +40,10 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
-                <a href="index.html" class="navbar-brand mx-auto mx-lg-0">sivalicc</a>
+                <a href="index.html" class="navbar-brand mx-auto mx-lg-0">
+                    <img src="/images/logo.png" alt="logo" >
+                    sivalicc
+                </a>
 
                 <div class="d-flex align-items-center d-lg-none">
                     <i class="navbar-icon bi-telephone-plus me-3"></i>
@@ -53,7 +55,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-lg-5">
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="/">Home</a>
+                            <a class="nav-link click-scroll" href="#">Home</a>
                         </li>
 
                         <li class="nav-item">
@@ -236,7 +238,7 @@
 
                                             <label class="form-check-label" for="inlineCheckbox3">
                                                 <i class="bi-phone form-check-icon"></i>
-                                                <span class="form-check-label-text">Facukty</span>
+                                                <span class="form-check-label-text">Faculty</span>
                                             </label>
                                         </div>
                                     </div>
