--- a/detail.html
+++ b/detail.html
@@ -55,7 +55,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-lg-5">
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="/">Home</a>
+                            <a class="nav-link click-scroll" href="#">Home</a>
                         </li>
 
                         <li class="nav-item">
